--- a/taskati_3_8/pubspec.yaml
+++ b/taskati_3_8/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   hive_flutter: ^1.1.0
   image_picker: ^1.0.7
   lottie: ^3.1.0
+  intl: ^0.18.0
+  date_picker_timeline: ^1.2.5
 
 dev_dependencies:
   flutter_lints: ^3.0.0
